# walletkit

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Package.swift  README.md  SECURITY.md  archive_swift.sh  build_android_local.sh  build_ios.sh  build_swift.sh  clippy.toml  cspell.json  deny.toml  flake.nix  generate_python_bindings.sh  index.d.ts  index.js  otto-docker-rate-limit-notes.md  package.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml  uniffi.toml
crates/issuer-host/: Cargo.toml
crates/issuer-host/src/: lib.rs
crates/issuer-sdk/: Cargo.toml
crates/issuer-sdk/src/: lib.rs
crates/nfc-kit/: Cargo.toml
crates/nfc-kit/src/: lib.rs
crates/orb-kit/: Cargo.toml
crates/orb-kit/src/: lib.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
crates/walletkit-cli/: Cargo.toml
crates/walletkit-cli/src/: main.rs  provider.rs
crates/walletkit-cli/src/commands/: auth.rs  credential.rs  mod.rs  proof.rs  recovery_agent.rs  setup.rs  wallet.rs
crates/walletkit-cli/tests/: cli_tests.rs
crates/walletkit-core/: Cargo.toml
crates/walletkit-core/src/: http_request.rs  lib.rs  primitives.rs  requests.rs
crates/walletkit-core/src/authenticator/: mod.rs  with_storage.rs
crates/walletkit-core/src/ohttp_keys/: production_ap.b64  production_eu.b64  staging_eu.b64
crates/walletkit-core/src/storage/: error.rs  keys.rs  mod.rs  paths.rs  traits.rs
crates/walletkit-core/src/v3/: merkle_tree.rs  proof.rs  world_id.rs
crates/walletkit-core/tests/: common.rs  proof_generation_integration.rs
crates/walletkit-core/tests/v3/: solidity.rs
crates/walletkit-db/: Cargo.toml  README.md  build.rs
crates/walletkit-db/src/: blobs.rs  envelope.rs  vault.rs
crates/walletkit-testkit/: Cargo.toml
crates/walletkit-testkit/src/: env.rs  issuer.rs  lib.rs  proof.rs
crates/walletkit-testkit/tests/: e2e.rs
experiment/: Cargo.toml  README.md  generate_python_bindings.sh
experiment/crates/mirror/: Cargo.toml
experiment/crates/shouty/: Cargo.toml
experiment/crates/switchboard/: Cargo.toml
experiment/host-python/: adapters.py  main.py
kotlin/: build.sh  (+9 more)
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: uniffi_bindgen.rs  uniffi_bindgen_react_native.rs
walletkit/: CHANGELOG.md  Cargo.toml  uniffi.toml
walletkit-cli/: BUGS.md  Cargo.toml  PR_DESCRIPTION.md  README.md  TESTING.md
walletkit-cli/src/: latency.rs  main.rs  output.rs  provider.rs
walletkit-cli/src/commands/: auth.rs  credential.rs  mod.rs  proof.rs  recovery_agent.rs  recovery_binding.rs  setup.rs  wallet.rs
walletkit-cli/tests/: cli_tests.rs
walletkit-core/: Cargo.toml  build.rs
walletkit-core/src/: authenticator.rs  common_apps.rs  credential.rs  credential_type.rs  defaults.rs  error.rs  field.rs  field_element.rs  http_request.rs  identity.rs  lib.rs  logger.rs  math.rs  merkle_tree.rs  primitives.rs  proof.rs  proof_request_credential_constraints_check.rs  request.rs  requests.rs  types.rs  u256.rs  user_agent.rs  utils.rs  world_id.rs
walletkit-core/src/authenticator/: mod.rs  storage.rs  utils.rs  with_storage.rs
walletkit-core/src/credential_storage/: error.rs  mod.rs  provisioning.rs  transfer.rs  types.rs
walletkit-core/src/issuers/: mod.rs  pop_backend_client.rs  pop_client.rs  proof_of_human.rs  recovery_bindings_manager.rs  tfh_nfc.rs  tfh_pop.rs
walletkit-core/src/ohttp_keys/: production_ap.b64  production_eu.b64  production_us.b64  staging_ap.b64  staging_eu.b64  staging_us.b64
walletkit-core/src/requests/: credential_check.rs  mod.rs
walletkit-core/src/storage/: credential_storage.rs  envelope.rs  error.rs  groth16_cache.rs  keys.rs  lock.rs  mod.rs  paths.rs  sqlcipher.rs  tests_utils.rs  traits.rs  types.rs  vault.rs
walletkit-core/src/v3/: common_apps.rs  credential_type.rs  merkle_tree.rs  mod.rs  proof.rs  world_id.rs
walletkit-core/tests/: README.md  authenticator_integration.rs  common.rs  credential_storage_integration.rs  proof_generation_integration.rs  solidity.rs
walletkit-core/tests/common/: mod.rs
walletkit-core/tests/contracts/: external_nullifier.sol
walletkit-db/: Cargo.toml  README.md  build.rs
walletkit-db/src/: blobs.rs  cipher.rs  connection.rs  envelope.rs  error.rs  ffi.rs  lib.rs  lock.rs  statement.rs  test_utils.rs  tests.rs  traits.rs  transaction.rs  value.rs  vault.rs  wasm_storage.rs
walletkit-db/src/sqlite/: cipher.rs  connection.rs  error.rs  ffi.rs  mod.rs  statement.rs  transaction.rs  value.rs
walletkit-napi/: Cargo.toml  index.d.ts  package.json
walletkit-napi/npm/android-arm-eabi/: README.md
walletkit-napi/npm/android-arm64/: package.json
walletkit-napi/npm/darwin-arm64/: README.md
walletkit-napi/npm/darwin-universal/: package.json
walletkit-napi/npm/freebsd-x64/: README.md
walletkit-napi/npm/linux-arm-gnueabihf/: package.json
walletkit-napi/npm/linux-arm64-gnu/: README.md  package.json
walletkit-napi/npm/linux-arm64-musl/: README.md
walletkit-napi/npm/linux-riscv64-gnu/: package.json
walletkit-napi/npm/linux-x64-musl/: README.md
walletkit-napi/npm/win32-ia32-msvc/: package.json
walletkit-napi/src/: lib.rs
walletkit-secure-store/: Cargo.toml
walletkit-secure-store/src/: blobs.rs  content_id.rs  envelope.rs  error.rs  key_init.rs  lib.rs  lock.rs  traits.rs  vault.rs
walletkit-testkit/: Cargo.toml
walletkit-testkit/src/: authenticator.rs  env.rs  flow.rs  issuer.rs  lib.rs  proof.rs  storage.rs  utils.rs
walletkit-testkit/tests/: e2e.rs
walletkit-uniffi/: Cargo.toml
walletkit-uniffi/src/: error.rs  lib.rs
walletkit-uniffi/src/hello/: mod.rs
walletkit/src/: error.rs  lib.rs
walletkit/src/hello/: mod.rs
wasm/: .gitignore  Cargo.toml  README.md  build.sh  cargo.patch.toml  node.cjs  node.d.ts  package-lock.json  package.json  test-node.mjs  tsconfig.json  tsconfig.node.json  ubrn.config.yaml  ubrn.node.config.yaml
wasm/out-node/src/: index.node.ts
wasm/scripts/: build-node.sh  build-web.sh
wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/kotlin/: build.rs  local.rs  mod.rs  test.rs
(+306 files in other folders)
