[workspace]
members = [
  "uniffi-bindgen",
  "walletkit-core",
  "walletkit",
  "walletkit-db",
  "walletkit-cli",
]
resolver = "2"

[workspace.package]
version = "0.17.1"
license = "MIT"
edition = "2021"
authors = ["World Contributors"]
readme = "./README.md"
homepage = "https://docs.world.org" # TODO: Update to specific WalletKit page
rust-version = "1.91" # MSRV
repository = "https://github.com/worldcoin/walletkit"
exclude = [
  "tests/",
  "uniffi-bindgen/",
  "walletkit-cli/",
  "/audits",
  "/kotlin",
  "/swift",
]
keywords = ["ZKP", "WorldID", "World", "Identity", "Semaphore"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]


[workspace.dependencies]
alloy-core = { version = "1", default-features = false, features = ["sol-types"] }
uniffi = { version = "0.31.0", features = [
  "tokio",
  "wasm-unstable-single-threaded",
] }
world-id-core = { version = "0.10.2", default-features = false }
world-id-proof = { version = "0.10.2", default-features = false }

# internal
walletkit-core = { version = "0.17.1", path = "walletkit-core", default-features = false }
walletkit-db = { version = "0.17.1", path = "walletkit-db" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[workspace.lints.rust]
missing_docs = "deny"
dead_code = "deny"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true      # Enable Link Time Optimization.
panic = "abort"
debug = false

# ProveKit has an additional `pattern` in the Whir R1CS proof which is used in debugging builds,
# because this isn't serialized, we explicitly remove it here as WalletKit only uses serialized proofs.
[profile.dev.package.provekit-common]
debug-assertions = false

[profile.dev.package.provekit-whir]
debug-assertions = false

[profile.dev.package.provekit-verifier]
debug-assertions = false

[profile.dev.package.provekit-prover]
debug-assertions = false
