[workspace]
members = [
  "crates/uniffi-bindgen",
  "crates/walletkit-core",
  "crates/walletkit",
  "crates/walletkit-db",
  "crates/walletkit-cli",
  "crates/walletkit-testkit",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.20.2"
license = "MIT"
edition = "2021"
authors = ["World Contributors"]
readme = "./README.md"
homepage = "https://docs.world.org"                             # TODO: Update to specific WalletKit page
rust-version = "1.91"                                           # MSRV
repository = "https://github.com/worldcoin/walletkit"
exclude = ["tests/"]
keywords = ["ZKP", "WorldID", "World", "Identity", "Semaphore"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]


[workspace.dependencies]
alloy = { version = "2", default-features = false }
alloy-core = { version = "1", default-features = false, features = [
  "sol-types",
] }
backon = "1.6"
base64 = "0.22"
cc = "1"
chacha20poly1305 = "0.10"
chrono = "0.4.41"
ciborium = "0.2.2"
clap = "4"
ctor = "0.2"
dirs = "6"
dotenvy = "0.15.7"
eyre = "0.6"
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
log = "0.4"
mockito = "1.6"
rand = "0.8.6"
regex = "1.11"
reqwest = { version = "0.12", default-features = false }
ruint = { version = "1.17", default-features = false }
ruint-uniffi = "0.1"
rustls = "0.23"
secrecy = "0.10"
semaphore-rs = "0.5.1"
serde = "1"
serde_json = "1"
sha2 = "0.10"
sqlite-wasm-rs = "0.5"
strum = "0.27"
subtle = "2"
taceo-oprf = { version = "0.16", default-features = false }
tempfile = "3"
test-case = "3.3"
thiserror = "2"
tokio = "1"
tokio-test = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
uniffi = { version = "0.31.0", features = [
  "tokio",
  "wasm-unstable-single-threaded",
] }
uuid = "1.10"
xshell = "0.2.7"
zeroize = "1"
zip = { version = "2", default-features = false }

# world-id-protocol crates
world-id-core = { version = "0.12.0", default-features = false }
world-id-proof = { version = "0.12.0", default-features = false }

# internal
walletkit-core = { version = "0.20.2", path = "crates/walletkit-core", default-features = false }
walletkit-db = { version = "0.20.2", path = "crates/walletkit-db" }
walletkit-testkit = { version = "0.20.2", path = "crates/walletkit-testkit" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[workspace.lints.rust]
missing_docs = "deny"
dead_code = "deny"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true      # Enable Link Time Optimization.
panic = "abort"
debug = false

# ProveKit has an additional `pattern` in the Whir R1CS proof which is used in debugging builds,
# because this isn't serialized, we explicitly remove it here as WalletKit only uses serialized proofs.
[profile.dev.package.provekit-common]
debug-assertions = false

[profile.dev.package.provekit-whir]
debug-assertions = false

[profile.dev.package.provekit-verifier]
debug-assertions = false

[profile.dev.package.provekit-prover]
debug-assertions = false
