[workspace]
members = [
  "crates/text-core",
  "crates/switchboard",
  "crates/shouty",
  "crates/mirror",
  "crates/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT"
authors = ["World Contributors"]
repository = "https://github.com/worldcoin/WalletKit"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-core = { path = "crates/text-core" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uniffi = { version = "0.31.0", features = ["tokio"] }
