[package]
name = "uniffi-bindgen"
description = "Binding generation for WalletKit"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
readme.keywords = true
readme.categories = true


[[bin]]
name = "uniffi-bindgen"
path = "./src/uniffi_bindgen.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }