[package]
name = "walletkit-cli"
description = "Developer CLI for WalletKit — World ID authenticator, credential management, and proof generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "walletkit"
path = "src/main.rs"

[dependencies]
walletkit-core = { workspace = true, features = ["storage", "issuers"] }
world-id-core = { workspace = true }
alloy = { version = "1", default-features = false, features = ["contract", "json", "getrandom", "signer-local"] }
taceo-oprf = { workspace = true, features = ["types"] }
alloy-primitives = { workspace = true }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
eyre = "0.6"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
