[package]
name = "walletkit-core"
description = "Reference implementation for the World ID Protocol. Core functionality to use a World ID."


version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "walletkit_core"

[dependencies]
alloy-core = { workspace = true }
alloy-primitives = { workspace = true }
backon = "1.6"
base64 = { version = "0.22" }
ctor = "0.2"
hex = "0.4"
hkdf = { version = "0.12", optional = true }
log = "0.4"
rand = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "brotli",
  "rustls-tls",
] }
ruint = { version = "1.17", default-features = false, features = ["alloc"] }
ruint-uniffi = { version = "0.1", features = ["serde"] }
rustls = { version = "0.23", features = ["ring"] }
secrecy = "0.10"
semaphore-rs = { version = "0.5", optional = true }
serde = "1"
serde_json = "1"
sha2 = { version = "0.10", optional = true }
strum = { version = "0.27", features = ["derive"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"
uuid = { version = "1.10", features = ["v4"], optional = true }
uniffi = { workspace = true }

world-id-core = { workspace = true, features = [
  "authenticator",
  "embed-zkeys",
  "zstd-compress-zkeys",
] }
world-id-proof = { workspace = true }
ciborium = { version = "0.2.2" }
walletkit-db = { workspace = true, optional = true }


[target.'cfg(target_os = "android")'.dependencies]
sha2 = { version = "0.10", features = ["force-soft"] }


[dev-dependencies]
alloy = { version = "2", default-features = false, features = [
  "getrandom",
  "json",
  "contract",
  "node-bindings",
  "signer-local",
] }
chacha20poly1305 = "0.10"
chrono = "0.4.41"
dotenvy = "0.15.7"
eyre = "0.6"
mockito = "1.6"
regex = "1.11"
taceo-oprf = { version = "0.13", default-features = false, features = [
  "types",
] } # TODO: remove once OprfKeyId gets removed from request
test-case = "3.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"


[features]
default = ["issuers", "storage"]

# Enables point-compression on all verifying keys. This results in ~2x smaller bundle size, but decompression is very expensive,
# using it requires proper handling to ensure decompression is done once and cached. By default walletkit-swift and walletkit-android
# ship with compressed keys. But this is disabled for tests.
compress-zkeys = ["world-id-core/compress-zkeys"]
issuers = []
storage = [
  "dep:hkdf",
  "dep:rand",
  "dep:sha2",
  "dep:uuid",
  "dep:walletkit-db",
]

# SECTION: V3 Feature Flags
# Before conventions were introduced for external nullifiers with `app_id` & `action`, raw field elements were used.
# This feature flag adds support to operate with such external nullifiers.
legacy-nullifiers = []
semaphore = ["dep:semaphore-rs", "semaphore-rs/depth_30"]
v3 = ["semaphore", "legacy-nullifiers", "ruint/ark-ff-04"]


[lints]
workspace = true
