[package]
name = "walletkit-db"
description = "Internal SQLite wrapper crate for WalletKit storage."
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex = "0.4"
zeroize = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = { version = "0.5", features = ["sqlite3mc"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
