[package]
name = "walletkit-db"
description = "Encrypted on-device storage primitives for WalletKit (SQLCipher wrapper, vault, content-addressed blobs, key envelope)."
publish = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ciborium = "0.2.2"
getrandom = "0.3"
hex = "0.4"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
sha2 = { version = "0.10", features = ["force-soft"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
sqlite-wasm-rs = { version = "0.5", features = ["sqlite3mc"] }

[build-dependencies]
cc = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
