[package]
name = "walletkit-testkit"
description = "Reusable end-to-end test helpers for WalletKit — storage providers, staging fixtures, credential issuance, and on-chain proof verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# Not published: ships staging URLs and test-RP private keys, and is consumed by git rev.
publish = false

[dependencies]
walletkit-core = { workspace = true, features = ["issuers", "embed-zkeys"] }
world-id-core = { workspace = true, features = ["authenticator"] }
alloy-core = { workspace = true }
alloy = { version = "2", default-features = false, features = ["contract", "json", "getrandom", "signer-local"] }
eyre = "0.6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
