[package]
name = "walletkit"
description = "Reference implementation for World ID clients."


version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "walletkit"

[dependencies]
uniffi = { workspace = true, features = ["build", "tokio"] }
walletkit-core = { workspace = true, features = ["legacy-nullifiers", "common-apps", "storage", "issuers"] }


[features]
default = ["semaphore"]
semaphore = ["walletkit-core/semaphore"]
storage = ["walletkit-core/storage"]

[package.metadata.docs.rs]
no-default-features = true
