[package]
name = "walletkit"
description = "Reference implementation for World ID clients."


version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "walletkit"

[dependencies]
uniffi = { workspace = true }
walletkit-core = { workspace = true }

[features]
default = ["issuers", "storage"]
compress-zkeys = ["walletkit-core/compress-zkeys"]
issuers = ["walletkit-core/issuers"]
storage = ["walletkit-core/storage"]

# v3 features
v3 = ["walletkit-core/v3"]

[lints]
workspace = true
