[package]
name = "xtask"
description = "Repository automation for WalletKit"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
xshell = { workspace = true }

[lints]
workspace = true
