[package]
name = "issuer-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
issuer-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
