[package]
name = "walletkit-core"
description = "Reference implementation for the World ID Protocol. Core functionality to use a World ID."


version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "walletkit_core"

[dependencies]
alloy-core = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ruint = { workspace = true, features = ["alloc"] }
ruint-uniffi = { workspace = true, features = ["serde"] }
secrecy = { workspace = true }
semaphore-rs = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uniffi = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walletkit-db = { workspace = true }
world-id-core = { workspace = true, features = ["authenticator"] }
world-id-proof = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

# Native-only dependencies (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctor = { workspace = true }
reqwest = { workspace = true, features = ["brotli", "rustls-tls"] }
rustls = { workspace = true, features = ["ring"] }

[target.'cfg(target_os = "android")'.dependencies]
sha2 = { workspace = true, features = ["force-soft"] }

[dev-dependencies]
alloy = { workspace = true, features = [
  "getrandom",
  "json",
  "contract",
  "node-bindings",
  "signer-local",
] }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
mockito = { workspace = true }
regex = { workspace = true }
taceo-oprf = { workspace = true, features = [
  "types",
] } # TODO: remove once OprfKeyId gets removed from request
test-case = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }


[features]
default = ["issuers"]

# Enables point-compression on all verifying keys. This results in ~2x smaller bundle size, but decompression is very expensive,
# using it requires proper handling to ensure decompression is done once and cached. By default walletkit-swift and walletkit-android
# ship with compressed keys. But this is disabled for tests.
compress-zkeys = ["world-id-core/compress-zkeys"]
issuers = []

# Embeds compiled zkeys into the binary at compile time, enabling `Groth16Materials::from_embedded`.
# Also activates `cache_embedded_groth16_material` on native targets.
# Disable this feature for environments where binary size matters (e.g. WASM).
embed-zkeys = ["world-id-core/embed-zkeys", "world-id-core/zstd-compress-zkeys"]

# SECTION: V3 Feature Flags
# Before conventions were introduced for external nullifiers with `app_id` & `action`, raw field elements were used.
# This feature flag adds support to operate with such external nullifiers.
legacy-nullifiers = []
semaphore = ["dep:semaphore-rs", "semaphore-rs/depth_30"]
v3 = ["semaphore", "legacy-nullifiers", "ruint/ark-ff-04"]

[[test]]
name = "authenticator_integration"
required-features = ["embed-zkeys"]

[[test]]
name = "proof_generation_integration"
required-features = ["embed-zkeys"]

[lints]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
# embed-zkeys is intentionally excluded: docs.rs builds have no network
# access, and world-id-core/embed-zkeys downloads circuit files at compile
# time. The crate-level doc example is marked `ignore` for this reason.
features = ["issuers"]
