[package]
name = "walletkit-testkit"
description = "Reusable end-to-end test helpers for WalletKit — storage providers, staging fixtures, credential issuance, and on-chain proof verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# Not published: ships staging URLs and test-RP private keys, and is consumed by git rev.
publish = false

[dependencies]
alloy = { workspace = true, features = ["contract", "json", "getrandom", "signer-local"] }
alloy-core = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4"] }
walletkit-core = { workspace = true, features = ["issuers", "embed-zkeys"] }
world-id-core = { workspace = true, features = ["authenticator"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lints]
workspace = true
